--- a/src/main/webapp/00_js4_ajax/08-02.html
+++ b/src/main/webapp/00_js4_ajax/08-02.html
@@ -7,15 +7,17 @@
 <script type="text/javascript">
 $(document).ready(function() {
 	/*
-	id="content"의 자식 div들의 글씨색을 blue로 설정한다. 
+	id="content"의 자식 div들의 글씨색을 blue로 설정한다.
 	id="content"의 자식 div들중에서 첫번째 자식의  글씨크기를 20pt로 설정한다.
 	id="content"의 자식 div들중에서 두번째 자식요소의 border를 black라인으로 설정한다.
 	id="content"의 자식 div들중에서 class가 test인 요소들의  글씨크기를 20pt로 설정한다.(filter)
 	id="content"의 자식들 중에서  class가 test가 아닌 요소들의  border를 black라인으로 설정한다.(not)
-	
-	 
 	*/
- 
+	$("#content > div").css("color", "blue");
+	$("#content > div:first").css("font-size", "20pt");
+	$("#content > div:nth-child(2)").css("border", "1px solid black");
+	$("#content > div.test").css("font-size", "20pt");
+	$("#content > div").not(".test").css("border", "1px solid black");
 });
 </script>
 </head>
