--- a/src/main/webapp/00_js4_ajax/08-09.html
+++ b/src/main/webapp/00_js4_ajax/08-09.html
@@ -12,7 +12,7 @@ $(document).ready(function() {
 	//방법1
 	//a와 c의 아래에 있는 div의 바탕색을  오렌지로 변경한다. (chain이용 : css, find, css)
     //방법2
-	$("a와 c의 아래에 있는 div").css("text-decoration", "underline");
+	$("#a, #c").find("div").css("background-color", "orange");
 });
 </script>
 </head>
