--- a/src/main/webapp/00_js4_ajax/10-17.html
+++ b/src/main/webapp/00_js4_ajax/10-17.html
@@ -14,7 +14,11 @@
 $(document).ready(function() {
 	//tbody내의 tr를 클릭했을때 data를 접근하기 
 	//alert("클릭된 국가 정보 => 번호 : " + no + ", 지역 : " +region);
-	 
+	$("tbody tr").on("click", function() {
+		const no = $(this).data("no");
+	    const region = $(this).data("region");
+	    alert("클릭된 국가 정보 => 번호 : " + no + ", 지역 : " + region);
+	});
 });
 </script>
 </head>
